--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,2 +1,9 @@
 yarnPath: ".yarn/releases/yarn-berry.cjs"
-nodeLinker: node-modules
+
+enableGlobalCache: true
+nmMode: hardlinks-global
+
+packageExtensions:
+  sharec-utils@2.10.2:
+    dependencies:
+      minimatch: ^3.0.4
