--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "main": "index.js",
   "license": "MIT",
+  "files": [
+    "configs"
+  ],
   "scripts": {
     "postinstall": "sharec"
   },
