chore: upgrade package versions

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,9 +1,9 @@
-yarnPath: ".yarn/releases/yarn-berry.cjs"
-
 enableGlobalCache: true
+
 nmMode: hardlinks-global
 
-packageExtensions:
-  sharec-utils@2.10.2:
-    dependencies:
-      minimatch: ^3.0.4
+plugins:
+  - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
+    spec: "@yarnpkg/plugin-typescript"
+
+yarnPath: .yarn/releases/yarn-3.0.2.cjs
