--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,12 @@
 {
-    "workbench.colorCustomizations": {
-        "[Eva Light Bold]": {
-            "terminal.ansiYellow": "#b8ac04",
-            "terminal.ansiBrightBlack": "#f890c0"
-        }
+  "workbench.colorCustomizations": {
+    "[Eva Light Bold]": {
+      "terminal.ansiYellow": "#b8ac04",
+      "terminal.ansiBrightBlack": "#f890c0"
     }
+  },
+  "search.exclude": {
+    "**/.yarn": true,
+    "**/.pnp.*": true
+  }
 }
