--- a/configs/package.json
+++ b/configs/package.json
@@ -5,17 +5,20 @@
 		"lint": "eslint ./src/**/*.{js,ts} && eslint *.md",
 		"test": "jest"
 	},
+	"files": [
+		"lib"
+	],
 	"devDependencies": {
 		"@types/jest": "^27.0.2",
-		"@typescript-eslint/eslint-plugin": "^4.29.3",
-		"@typescript-eslint/parser": "^4.29.3",
-		"eslint": "^7.32.0",
+		"@typescript-eslint/eslint-plugin": "^5.0.0",
+		"@typescript-eslint/parser": "^5.0.0",
+		"eslint": "^8.0.1",
 		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-prettier": "^3.4.1",
-		"jest": "^27.2.1",
+		"eslint-plugin-prettier": "^4.0.0",
+		"jest": "^27.2.5",
 		"markdown-eslint-parser": "^1.2.1",
-		"prettier": "^2.3.2",
-		"ts-jest": "^27.0.5",
-		"typescript": "^4.3.5"
+		"prettier": "^2.4.1",
+		"ts-jest": "^27.0.7",
+		"typescript": "^4.4.4"
 	}
 }
