--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "configs"
   ],
   "scripts": {
+    "format": "prettier -w -u configs/*",
     "postinstall": "sharec && cd $PROJECT_CWD && yarn config set nmMode hardlinks-global && yarn config set enableGlobalCache true && yarn plugin import typescript && yarn dlx @yarnpkg/sdks vscode"
   },
   "packageManager": "yarn@3.0.2",
   "dependencies": {
     "sharec": "^2.10.7"
+  },
+  "devDependencies": {
+    "prettier": "^2.4.1"
   }
 }
