--- a/configs/.eslintrc.yml
+++ b/configs/.eslintrc.yml
@@ -3,17 +3,18 @@ env:
   browser: true
   es2021: true
 extends:
-  - "eslint:recommended"
-  - "plugin:@typescript-eslint/recommended"
-  - "plugin:prettier/recommended"
-parser: "@typescript-eslint/parser"
+  - 'eslint:recommended'
+  - 'plugin:@typescript-eslint/recommended'
+  - 'plugin:prettier/recommended'
+parser: '@typescript-eslint/parser'
 parserOptions:
   ecmaVersion: 12
   sourceType: module
 plugins:
-  - "@typescript-eslint"
+  - '@typescript-eslint'
 ignorePatterns:
-  - "dist"
+  - 'dist'
+reportUnusedDisableDirectives: true
 rules:
   indent:
     - error
@@ -29,5 +30,5 @@ rules:
     - always
 overrides:
   - files:
-      - "*.md"
-    parser: "markdown-eslint-parser"
+      - '*.md'
+    parser: 'markdown-eslint-parser'
