--- a/configs/.yarnrc.yml
+++ b/configs/.yarnrc.yml
@@ -1,4 +1,4 @@
-yarnPath: ".yarn/releases/yarn-berry.cjs"
+yarnPath: '.yarn/releases/yarn-berry.cjs'
 
 enableGlobalCache: true
 nmMode: hardlinks-global
