--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "format": "prettier -w -u configs/*",
-    "postinstall": "sharec && cd $PROJECT_CWD && yarn config set nmMode hardlinks-global && yarn config set enableGlobalCache true && yarn plugin import typescript && yarn dlx @yarnpkg/sdks vscode"
+    "postinstall": "sharec"
   },
   "packageManager": "yarn@3.0.2",
   "dependencies": {
